# cohort-cocl2-sandbox

./: .gitignore
src/public/: irt_core.h
src/untrusted/cocl2/: BUILD.gn  cocl2_bridge.h  irt_cocl2.h  irt_cocl2_interfaces.c  irt_cocl2_interfaces.h
src/untrusted/irt/: BUILD.gn  irt.h  irt_entry_core.c  irt_interfaces.c  nacl.scons
